--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -30,7 +30,7 @@
           <a class="nav-link {{ request()->is('sell') ? 'active' : '' }}" href="../views/sell.php">SELL</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ request()->is('about') ? 'active' : '' }}" href="#about">ABOUT</a>
+          <a class="nav-link {{ request()->is('about') ? 'active' : '' }}" href="../views/contactus.php">ABOUT</a>
         </li>
       </ul>
     </div>
@@ -46,22 +46,14 @@
       <a class="nav-link" href="#">
         <img src="../resource/images/Icon_Gambar/Semua_Icon/gift.png" alt="Gift Icon" style="width: 24px; height: 24px;">
       </a>
-      <a class="nav-link" href="/shopwomen">
+      <a class="nav-link" href="#">
         <img src="../resource/images/Icon_Gambar/Semua_Icon/shopping bag.png" alt="Shopping Bag Icon" style="width: 24px; height: 24px;">
       </a>
       <!-- Profile Icon with Dropdown -->
       <a class="nav-link profile-link position-relative" href="#" id="profileIcon">
         <img src="../resource/images/Icon_Gambar/Semua_Icon/profile.png" alt="Profile Icon" style="width: 24px; height: 24px;">
       </a>
-      <!-- Dropdown Menu -->
-      <div class="profile-dropdown d-none position-absolute" id="profileDropdown">
-        <ul>
-          <li><a href="/dashboard">Profile</a></li>
-          <li><a href="/setting">Setting</a></li>
-          <hr>
-          <li><a href="/">Sign Out</a></li>
-        </ul>
-      </div>
+      
     </div>
   </div>
 </nav>
