--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -10,15 +10,15 @@
         <ul class="list-unstyled">
           <li class="mb-3">
             <i class="bi bi-envelope-fill me-2"></i>
-            <a href="mailto:ReWardNext24@gmail.com" class="footer-link">thriftinindo@gmail.com</a>
+            <a href="mailto:ThritIn@gmail.com class="footer-link">thriftinindo@gmail.com</a>
           </li>
           <li class="mb-3">
             <i class="bi bi-instagram me-2"></i>
-            <a href="https://instagram.com/ReWardNext24" class="footer-link">@Thriftin._</a>
+            <a href="https://instagram.com/ThriftIn" class="footer-link">@Thriftin._</a>
           </li>
           <li>
             <i class="bi bi-facebook me-2"></i>
-            <a href="https://facebook.com/ReWardNext24" class="footer-link">ThriftinIndo</a>
+            <a href="https://facebook.com/ThriftIn" class="footer-link">ThriftinIndo</a>
           </li>
         </ul>
       </div>
@@ -37,7 +37,7 @@
       <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
         <h5 class="footer-title">Help</h5>
         <ul class="list-unstyled">
-          <li class="mb-3"><a href="/contactus" class="footer-link">Contact Us</a></li>
+          <li class="mb-3"><a href="#" class="footer-link">Contact Us</a></li>
           <li><a href="#" class="footer-link">FAQ</a></li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
   <!-- Copyright -->
   
   <div class="footer-bar py-3 text-center" >
-    <p class="footer-text mb-0">Copyright © 2024 ReWard Company</p>
+    <p class="footer-text mb-0">Copyright © 2024 ThritIn Company</p>
   </div>
   
 </footer>
