--- a/resource/css/landing.css
+++ b/resource/css/landing.css
@@ -129,9 +129,9 @@ body {
 }
 
 
-/* Primary Button (Donate) */
+/* Primary Button (sell) */
 
-.donate-btn {
+.sell-btn {
     background-color: #0B2442;
     /* Muted Coral */
     color: white;
@@ -147,8 +147,8 @@ body {
     font-weight: 700;
 }
 
-.donate-btn:hover {
-    background-color: white;
+.sell-btn:hover {
+    background-color: rgb(245, 163, 163);
     color: #0B2442;
     /* Change text color on hover */
     transform: translateY(-3px);
@@ -159,7 +159,7 @@ body {
 /* Secondary Button (Shop) */
 
 .shop-btn {
-    background-color: #ffffff;
+    background-color: #e1dfdf;
     /* Dark Charcoal */
     color: #151616;
     padding: 15px 40px;
@@ -185,7 +185,7 @@ body {
 /* Responsive Adjustments */
 
 @media (max-width: 768px) {
-    .donate-btn,
+    .sell-btn,
     .shop-btn {
         padding: 12px 30px;
         font-size: 16px;
@@ -456,16 +456,16 @@ body {
 }
 
 
-/* Donate Section Styles */
+/* sell Section Styles */
 
-.donate-section {
+.sell-section {
     background-color: #D9D9D9;
     padding: 0;
     width: 100%;
     margin: 0;
 }
 
-.donate-title {
+.sell-title {
     font-family: 'Montserrat', sans-serif;
     font-size: 36px;
     font-weight: bold;
@@ -473,7 +473,7 @@ body {
     margin-bottom: 20px;
 }
 
-.donate-description {
+.sell-description {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     color: #333;
@@ -483,7 +483,7 @@ body {
 
 /* Images grid without gap and border radius */
 
-.donate-images-grid {
+.sell-images-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -491,7 +491,7 @@ body {
     padding: 0;
 }
 
-.donate-image img {
+.sell-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -504,7 +504,7 @@ body {
 /* Responsive adjustments */
 
 @media (max-width: 576px) {
-    .donate-images-grid {
+    .sell-images-grid {
         grid-template-columns: 1fr;
     }
 }
@@ -549,6 +549,10 @@ body {
 .carousel-control-next {
     position: absolute;
 }
+
+.carousel-item {
+            transition: transform 1.5s ease-in-out, opacity 1.5s ease-in-out;
+        }
 
 
 /* Responsive Adjustments */
