--- a/resource/css/sell2.css
+++ b/resource/css/sell2.css
@@ -133,16 +133,17 @@ form input {
 button {
     padding: 15px;
     font-size: 16px;
-    background-color: #e74c3c;
+    background-color: #0B2442;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 16px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 button:hover {
-    background-color: #c0392b;
+    background-color: #154074;
+    transform: translateY(-3px);
 }
 
 
