--- a/resource/css/sell3.css
+++ b/resource/css/sell3.css
@@ -1,5 +1,3 @@
-/* General reset */
-
 * {
     margin: 0;
     padding: 0;
@@ -9,15 +7,12 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #FDFDFD;
-    color: #333;
+    color: #000000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
 }
-
-
-/* Navbar styling */
 
 header {
     background-color: #fff;
@@ -62,7 +57,7 @@ header {
 
 .thank-you-section img {
     max-width: 400px;
-    /* Increased size of the image */
+    margin-top: -1em;
     margin-bottom: 20px;
     height: auto;
 }
@@ -71,20 +66,21 @@ header {
 /* Button styling */
 
 .btn {
-    background-color: #E74C3C;
+    background-color: #0B2442;
     color: white;
     padding: 15px 40px;
     font-size: 18px;
     border: none;
-    border-radius: 5px;
+    border-radius: 16px;
     cursor: pointer;
     text-decoration: none;
-    transition: 0.3s ease;
+    transition: 0.3s ease, transform 0.3s ease;
 }
 
 .btn:hover {
-    background-color: #c0392b;
+    background-color: #154074;
     color: #fff;
+    transform: translateY(-3px);
 }
 
 /* Responsive styles */
