changes to landing page and navbar

--- a/resource/css/app.css
+++ b/resource/css/app.css
@@ -15,7 +15,7 @@ footer {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 18px;
-    color: #FFB649;
+    color: #ffffff;
     margin-bottom: 20px;
 }
 
