--- a/resource/css/shop.css
+++ b/resource/css/shop.css
@@ -200,6 +200,26 @@ body {
     text-decoration: underline;
 }
 
+.hover-image {
+    transition: opacity 0.9s ease-in;
+    position: relative;
+  }
+  
+  .hover-image::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: var(--hover-image);
+    opacity: 0;
+    transition: opacity 0.6s ease;
+  }
+  
+  .card:hover .hover-image::after {
+    opacity: 1;
+  }
 
 /* Responsive Adjustments */
 
