--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -9,7 +9,7 @@
   <div class="container d-flex justify-content-between">
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="../views/index.php">
-      <img src="../resource/images/Logo_Thriftin.png" alt="ReWard Logo" class="img-fluid logo-image">
+      <img src="../resource/images/Logo_Thriftin.png" alt="thriftIn Logo" class="img-fluid logo-image">
     </a>
 
     <!-- Button for Mobile Navbar Toggle -->
