--- a/resource/css/landing.css
+++ b/resource/css/landing.css
@@ -265,7 +265,7 @@ body {
 /* Responsive Adjustments */
 
 @media (max-width: 992px) {
-    .reward-title {
+    .thriftIn-title {
         font-size: 70px;
         /* Adjust font size for tablets */
     }
@@ -289,7 +289,7 @@ body {
 }
 
 @media (max-width: 576px) {
-    .reward-title {
+    .thriftIn-title {
         font-size: 50px;
         /* Adjust font size for mobile */
     }
@@ -503,7 +503,7 @@ body {
 }
 
 @media (max-width: 400px) {
-    .reward-title {
+    .thriftIn-title {
         font-size: 40px;
     }
     .thrift-title {
@@ -549,7 +549,7 @@ body {
 
 
 /* Add a soft shadow to give depth */
-.about-reward-section::before {
+.about-thriftIn-section::before {
     content: "";
     position: absolute;
     top: 0;
@@ -561,7 +561,7 @@ body {
     z-index: 0;
 }
 
-.about-reward-section > div {
+.about-thriftIn-section > div {
     position: relative;
     z-index: 2;
 }
@@ -662,7 +662,7 @@ body {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .about-reward-section {
+    .about-thriftIn-section {
         padding: 60px 20px;
     }
 
