--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -9,7 +9,7 @@
   <div class="container d-flex justify-content-between">
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="../views/index.php">
-      <img src="../resource/images/Logo_Thriftin.png" alt="ReWard Logo" class="img-fluid logo-image">
+      <img src="../resource/images/Logo_Thriftin.png" alt="thriftin Logo" class="img-fluid logo-image">
     </a>
 
     <!-- Button for Mobile Navbar Toggle -->
@@ -28,9 +28,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link {{ request()->is('sell') ? 'active' : '' }}" href="../views/sell.php">SELL</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {{ request()->is('about') ? 'active' : '' }}" href="../views/contactus.php">ABOUT</a>
         </li>
       </ul>
     </div>
