--- a/resource/css/shopdetail.css
+++ b/resource/css/shopdetail.css
@@ -1,5 +1,3 @@
-/* General Styles */
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -18,7 +16,7 @@ body {
 .nav-tabs .nav-link {
     font-size: 18px;
     font-weight: 600;
-    color: #000;
+    color: #0B2442;
     background-color: transparent;
     border: none;
     transition: background-color 0.3s, color 0.3s;
@@ -26,7 +24,7 @@ body {
 
 .nav-tabs .nav-link.active {
     font-weight: 700;
-    color: #000;
+    color: #0B2442;
     background-color: #fff;
     border-bottom: 2px solid #4B5E7E;
     transition: background-color 0.3s, color 0.3s;
@@ -34,7 +32,7 @@ body {
 
 .nav-tabs .nav-link:hover {
     background-color: #f8f8f8;
-    color: #000;
+    color: #0B2442;
 }
 
 .search-wrapper {
@@ -107,7 +105,6 @@ body {
     color: #333;
 }
 
-
 /* Adjust the carousel image size */
 
 .carousel-inner img {
@@ -165,7 +162,7 @@ body {
 
 .product-price {
     font-size: 16px;
-    color: #333;
+    color: #0B2442;
 }
 
 
@@ -173,7 +170,7 @@ body {
 
 .wishlist-icon {
     font-size: 22px;
-    color: #333;
+    color: #0B2442;
     /* Default color for the heart icon */
     transition: color 0.3s ease;
 }
