--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -1,18 +1,19 @@
 <!-- resources/views/layout/footer.blade.php -->
 <link rel="stylesheet" href="../resource/css/app.css">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Voga&display=swap" rel="stylesheet">
-<footer class="footer py-5" style="background-color: #0B2442;">
+
+<footer class="footer py-4" style="background-color: #0B2442; color: #F7F7F6;">
   <div class="container">
-    <div class="row justify-content-between">
+    <div class="row">
       <!-- Contact Us -->
-      <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+      <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
         <h5 class="footer-title">Contact Us</h5>
         <ul class="list-unstyled">
-          <li class="mb-3">
+          <li>
             <i class="bi bi-envelope-fill me-2"></i>
             <a href="mailto:thriftinNext24@gmail.com" class="footer-link">thriftinindo@gmail.com</a>
           </li>
-          <li class="mb-3">
+          <li>
             <i class="bi bi-instagram me-2"></i>
             <a href="https://instagram.com/thriftinNext24" class="footer-link">@Thriftin._</a>
           </li>
@@ -24,26 +25,26 @@
       </div>
 
       <!-- Categories -->
-      <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+      <div class="col-lg-2 col-md-6 col-sm-12 mb-3">
         <h5 class="footer-title">Categories</h5>
         <ul class="list-unstyled">
-          <li class="mb-3"><a href="../views/shop.php" class="footer-link">Women's Fashion</a></li>
-          <li class="mb-3"><a href="../views/shopmen.php" class="footer-link">Men's Fashion</a></li>
+          <li><a href="../views/shop.php" class="footer-link">Women's Fashion</a></li>
+          <li><a href="../views/shopmen.php" class="footer-link">Men's Fashion</a></li>
           <li><a href="../views/shopkid.php" class="footer-link">Kid's Fashion</a></li>
         </ul>
       </div>
 
       <!-- Help -->
-      <div class="col-lg-2 col-md-6 col-sm-12 mb-4">
+      <div class="col-lg-2 col-md-6 col-sm-12 mb-3">
         <h5 class="footer-title">Help</h5>
         <ul class="list-unstyled">
-          <li class="mb-3"><a href="/contactus" class="footer-link">Contact Us</a></li>
+          <li><a href="/contactus" class="footer-link">Contact Us</a></li>
           <li><a href="#" class="footer-link">FAQ</a></li>
         </ul>
       </div>
 
       <!-- Offline Store -->
-      <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+      <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
         <h5 class="footer-title">Offline Store</h5>
         <p class="footer-text">
           <i class="bi bi-geo-alt-fill me-2"></i>Pasir Kaliki, Cicendo, Kota Bandung, Jawa Barat, Indonesia
@@ -53,9 +54,7 @@
   </div>
 
   <!-- Copyright -->
-  
-  <div class="footer-bar py-3 text-center" >
-    <p class="footer-text mb-0">Copyright © 2024 thriftin Company</p>
+  <div class="footer-bar text-center py-2" style="border-top: 1px solid rgba(255, 255, 255, 0.2);">
+    <p class="mb-0 footer-text">© 2024 Thriftin Company. All rights reserved.</p>
   </div>
-  
 </footer>
