--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -12,22 +12,32 @@
       <img src="../resource/images/Logo_Thriftin.png" alt="thriftin Logo" class="img-fluid logo-image">
     </a>
 
-    <!-- Button for Mobile Navbar Toggle -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Hamburger Menu (Mobile View) -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <!-- Navigation Links -->
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link {{ request()->is('homepage') ? 'active' : '' }}" href="../views/index.php">HOME</a>
+          <a class="nav-link mobile-menu-item {{ request()->is('homepage') ? 'active' : '' }}" href="../views/index.php">
+            <span class="mobile-text">HOME</span>
+            <i class="fas fa-chevron-right mobile-arrow"></i> 
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ request()->is('shopwomen') ? 'active' : '' }}" href="../views/shop.php">SHOP</a>
+          <a class="nav-link mobile-menu-item {{ request()->is('shopwomen') ? 'active' : '' }}" href="../views/shop.php">
+            <span class="mobile-text">SHOP</span>
+            <i class="fas fa-chevron-right mobile-arrow"></i> 
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {{ request()->is('sell') ? 'active' : '' }}" href="../views/sell.php">SELL</a>
+          <a class="nav-link mobile-menu-item {{ request()->is('sell') ? 'active' : '' }}" href="../views/sell.php">
+            <span class="mobile-text">SELL</span>
+            <i class="fas fa-chevron-right mobile-arrow"></i> 
+          </a>
         </li>
       </ul>
     </div>
@@ -50,10 +60,10 @@
       <a class="nav-link profile-link position-relative" href="#" id="profileIcon">
         <img src="../resource/images/Icon_Gambar/Semua_Icon/profile.png" alt="Profile Icon" style="width: 24px; height: 24px;">
       </a>
-      
     </div>
   </div>
 </nav>
+
 
 <script>
     document.getElementById('profileIcon').addEventListener('click', function(event) {
