--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -6,10 +6,11 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-  <div class="container d-flex justify-content-between">
+  <div class="container d-flex justify-content-between align-items-center top-bar">
+    
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="../views/index.php">
-      <img src="../resource/images/Logo_Thriftin.png" alt="thriftin Logo" class="img-fluid logo-image">
+      <img src="../resource/images/Logo_Thriftin.png" alt="Thriftin Logo" class="img-fluid logo-image">
     </a>
 
     <!-- Hamburger Menu (Mobile View) -->
@@ -17,6 +18,8 @@
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    
 
     <!-- Navigation Links -->
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -41,28 +44,23 @@
         </li>
       </ul>
     </div>
-
-    <!-- User Icons -->
-    <div class="d-flex align-items-center position-relative">
-      <a class="nav-link" href="#">
-        <img src="../resource/images/Icon_Gambar/Semua_Icon/notification.png" alt="Notification Icon" style="width: 24px; height: 24px;">
-      </a>
-      <a class="nav-link" href="#">
-        <img src="../resource/images/Icon_Gambar/Semua_Icon/love.png" alt="Love Icon" style="width: 24px; height: 24px;">
-      </a>
-      <a class="nav-link" href="#">
-        <img src="../resource/images/Icon_Gambar/Semua_Icon/gift.png" alt="Gift Icon" style="width: 24px; height: 24px;">
-      </a>
-      <a class="nav-link" href="#">
-        <img src="../resource/images/Icon_Gambar/Semua_Icon/shopping bag.png" alt="Shopping Bag Icon" style="width: 24px; height: 24px;">
-      </a>
-      <!-- Profile Icon with Dropdown -->
+    <!-- User Icons (Right Side on Desktop, Top with Logo on Mobile) -->
+    <div class="user-icons d-flex align-items-center">
+      <a class="nav-link" href="#"><img src="../resource/images/Icon_Gambar/Semua_Icon/notification.png" alt="Notification Icon" style="width: 24px; height: 24px;"></a>
+      <a class="nav-link" href="#"><img src="../resource/images/Icon_Gambar/Semua_Icon/love.png" alt="Love Icon" style="width: 24px; height: 24px;"></a>
+      <a class="nav-link" href="#"><img src="../resource/images/Icon_Gambar/Semua_Icon/gift.png" alt="Gift Icon" style="width: 24px; height: 24px;"></a>
+      <a class="nav-link" href="#"><img src="../resource/images/Icon_Gambar/Semua_Icon/shopping bag.png" alt="Shopping Bag Icon" style="width: 24px; height: 24px;"></a>
       <a class="nav-link profile-link position-relative" href="#" id="profileIcon">
         <img src="../resource/images/Icon_Gambar/Semua_Icon/profile.png" alt="Profile Icon" style="width: 24px; height: 24px;">
       </a>
     </div>
+
   </div>
 </nav>
+    
+
+    
+
 
 
 <script>
