--- a/resource/css/sell.css
+++ b/resource/css/sell.css
@@ -57,7 +57,7 @@ body {
     cursor: pointer;
 }
 
-.photo-item:hover{
+.photo-item:hover {
     transform: translateY(-3px);
 }
 
@@ -65,12 +65,6 @@ body {
     width: 35px;
     height: 35px;
     object-fit: contain;
-}
-
-.photo-item span {
-    margin-top: 8px;
-    font-size: 14px;
-    color: #4A4A48;
 }
 
 textarea {
@@ -86,9 +80,7 @@ textarea {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
-
 /* Detail Section */
-
 .detail-section {
     flex: 1;
 }
@@ -99,8 +91,7 @@ textarea {
     margin-bottom: 20px;
 }
 
-.detail-section select,
-input[type="color"] {
+.detail-section select {
     width: 100%;
     padding: 15px;
     margin-bottom: 20px;
@@ -108,12 +99,9 @@ input[type="color"] {
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #fafafa;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
-
 /* Submit Button */
-
 .submit-button {
     display: flex;
     justify-content: center;
@@ -122,14 +110,12 @@ input[type="color"] {
 
 .submit-button button {
     padding: 15px 80px;
-    /* Made button wider */
     font-size: 18px;
     background-color: #0B2442;
     color: white;
     border: none;
     border-radius: 16px;
     cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
@@ -138,9 +124,7 @@ input[type="color"] {
     transform: translateY(-3px);
 }
 
-
 /* Responsive Adjustments */
-
 @media (max-width: 768px) {
     .sell-container {
         flex-direction: column;
@@ -151,6 +135,5 @@ input[type="color"] {
     }
     .submit-button button {
         width: 100%;
-        /* Ensure the button takes full width on mobile */
     }
 }
